# new-nexus-firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/led_strip_encoder/: CMakeLists.txt  led_strip_encoder.c  led_strip_encoder.h
main/: CMakeLists.txt  audio_capture.c  audio_capture.h  battery_monitor.c  battery_monitor.h  ble_manager.c  ble_manager.h  button_handler.c  button_handler.h  command_protocol.h  config.h  haptic.c  haptic.h  led_controller.c  led_controller.h  main.c  power_manager.c  power_manager.h
